# jobscrape-public

./: LICENSE.txt  pyproject.toml  run.py
src/: ai_review.py  db.py  extract.py  llm.py  notion.py  scraper.py  typedefs.py
