[project]
name = "jobsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asynciolimiter>=1.1.1",
    "html2text>=2024.2.26",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "nbstripout>=0.8.1",
    "notion-client>=2.3.0",
    "openai>=1.66.2",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "pydantic>=2.10.6",
    "pydoll-python>=1.2.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.29.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

 [tool.pytest.ini_options]
   pythonpath = ["."]